Performance improvements + concurrent disqual of guesses